--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,15 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>SE3316 Lab 3 Music Database</h1>
+<h1>SE3316 Lab 3 Music Database </h1>
+
+    <div>
+        <a href="login.html">
+        <button>LOGIN</button>
+        </a>
+    </div>
 <h3>Search for music tracks</h3>
+
 <!--Adding the search bar for track names + albums-->
 <div class="firstSearch">
     <input id="searchBarTracks" type="text"
