User database and password encryption
Added a user table in our db. Installed and utilized Bcrypt npm module to encrypt the passwords in the db for security.

--- a/static/login.html
+++ b/static/login.html
@@ -35,7 +35,7 @@
        <input name = 'username' required></br>
 
        <br><label for= 'email'>Enter email: </label>
-       <input name = 'email' required></br>
+       <input name = 'email' type="email" required></br>
        
        <br><label for= 'password'>Enter password: </label>
        <input name = 'password' type = 'password' required></br>
