--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>SE3316 Lab 3 Music Database </h1>
+<h1>SE3316 Lab 4 Music Database </h1>
 
     <div>
         <a href="login.html">
@@ -72,7 +72,7 @@
     </span>
 </div>
 <br></br>
-<div id="bottom">SE3316-Lab-3 By Kevin Abdo ©</div>
+<div id="bottom">SE3316-Lab-4 By Kevin Abdo & Jack Bird ©</div>
 <script defer src="script.js"></script>
 </body>
 </html>
