Confirm password now working

--- a/static/index.html
+++ b/static/index.html
@@ -73,6 +73,6 @@
 </div>
 <br></br>
 <div id="bottom">SE3316-Lab-4 By Kevin Abdo & Jack Bird ©</div>
-<script defer src="script.js"></script>
+<script defer src="mainscript.js"></script>
 </body>
 </html>
