Organized some files

--- a/static/login.html
+++ b/static/login.html
@@ -2,7 +2,7 @@
 <html>
    <head>
      <title>SE3316 Database Login</title>
-     <link rel="stylesheet" href="main.css" />
+     <link rel="stylesheet" href="login.css" />
      <style>
      </style>
    </head>
@@ -50,7 +50,7 @@
    </form>
    
    <div id="bottom">SE3316-Lab-4 By Kevin Abdo & Jack Bird ©</div>
-   <script defer src="loginscript.js"></script>
+   <script defer src="login.js"></script>
     </body>
    </centre>
    
