Updates to homepage

--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,23 @@
         
 </div>
 
+<br></br>
 
+
+<div class="about" id="about">
+    <h3>About this page</h3>
+    <p>Hello and welcome to Kevin and Jack's final project for their web development class :)</p>
+    <p>We essentially have to remake spotify and include all it's bells and whistles.</p>
+    <p>Please have a look around and try out some of the site's features.</p>
+    <p>Note: interacting with playlists is limited to logged in users.</p>
+
+
+</div>
+
+
+<br></br>
+<br></br>
+<br></br>
 <br></br>
 <div id="bottom">SE3316-Lab-4 By Kevin Abdo & Jack Bird ©</div>
 <script defer src="script.js"></script>
