--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Music Database</title>
+<title>SE3316 Lab4</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
