Review box for playlist

--- a/static/playlist.html
+++ b/static/playlist.html
@@ -64,6 +64,14 @@
         <select name="playsL" id="playsL">
          </select>
         <button id="viewList">View</button>
+
+        <br><br>
+        <br>
+        <italic>Add a review to selected playlist</italic>
+        </br>
+        <textarea id="review" rows="9" cols="60"></textarea>
+        <button id="addTrack">Add</button>
+        </br></br>
         
         </br></br>
         <h4 id="cTrack">Current Tracks</h4>
