--- a/static/playlist.html
+++ b/static/playlist.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Playlists</title>
 <link rel="stylesheet" href="style.css">
+<!-- Add icon library -->
 </head>
 <body>
 <h1>Playlists & More </h1>
@@ -66,12 +67,28 @@
         <button id="viewList">View</button>
 
         <br><br>
+                <!--For the rating system-->
+                <div class="rate">
+                    <input type="radio" id="star5" name="rate" value="5" />
+                    <label for="star5" title="text">5 stars</label>
+                    <input type="radio" id="star4" name="rate" value="4" />
+                    <label for="star4" title="text">4 stars</label>
+                    <input type="radio" id="star3" name="rate" value="3" />
+                    <label for="star3" title="text">3 stars</label>
+                    <input type="radio" id="star2" name="rate" value="2" />
+                    <label for="star2" title="text">2 stars</label>
+                    <input type="radio" id="star1" name="rate" value="1" />
+                    <label for="star1" title="text">1 star</label>
+                  </div>
+                  <br></br>
         <br>
         <italic>Add a review to selected playlist</italic>
         </br>
         <textarea id="review" rows="9" cols="60"></textarea>
         <button id="addTrack">Add</button>
         </br></br>
+
+
         
         </br></br>
         <h4 id="cTrack">Current Tracks</h4>
