DMCA policy created

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,14 @@
         </a>
     </div>
 
+    <a href='DMCA_POLICY_SE3316_Lab 4.pdf'>
+        <h4>DMCA Policy</h4>
+      </a>
+
+      <a href='index.html'>
+        <h4>AUP Policy</h4>
+      </a>
+
 <!--to add some space betweeb divs-->
 <br></br>
 <br></br>
