--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
         </a>
     </div>
 
-    <a href='DMCA_POLICY_SE3316_Lab 4.pdf'>
+    <a href='DMCA_POLICY.pdf'>
         <h4>DMCA Policy</h4>
       </a>
 
