Fined login issues and move db files

--- a/static/login.html
+++ b/static/login.html
@@ -12,6 +12,7 @@
 
   <body id="all">
 
+
     <a href='index.html'>
       <h2>Back to Homepage</h2>
     </a>
@@ -56,3 +57,10 @@
       </br>
       <input type="submit" value="Submit" name="userSubmitTimes" id="registerSubmit">
     </form>
+
+    <script defer src="login.js"></script>
+  </body>
+
+</centre>
+
+</html>
