Ability to view all login user playlists

--- a/static/playlist.html
+++ b/static/playlist.html
@@ -85,9 +85,9 @@
         <h4>View Current Playlists</h4>
         <label for="Available Lists">Choose a Playlist:</label>
 
-        <select name="playsL" id="playsL">
+        <select name="playsLAll" id="playsLAll">
          </select>
-        <button id="viewList">View</button>
+        <button id="viewAllPlaylist">View</button>
         <button id="deleteList">Delete</button>
         <br><br>Add a Track_id to selected playlist: <input type="text" id="trackName" maxlength="7">
         <button id="addTrack">Add</button>
