--- a/static/index.html
+++ b/static/index.html
@@ -6,27 +6,17 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Homepage </h1>
 
-    <div>
-        <a href="login.html">
-        <button>LOGIN</button>
-        </a>
 
-        
+<div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="login.html">Login</a>
+    <a href="playlist.html">Playlists</a>
+    <a href="DMCA_POLICY.pdf">DMCA Policy</a>
+    <a href="index.html">AUP Policy</a>
+    
+  </div>
 
-        <a href="playlist.html">
-        <button>Playlists</button>
-        </a>
-    </div>
-
-    <a href='DMCA_POLICY.pdf'>
-        <h4>DMCA Policy</h4>
-      </a>
-
-      <a href='index.html'>
-        <h4>AUP Policy</h4>
-      </a>
 
 <!--to add some space betweeb divs-->
 <br></br>
