--- a/static/login.html
+++ b/static/login.html
@@ -12,10 +12,16 @@
 
   <body id="all">
 
+    <div class="topnav">
+      <a href="index.html">Home</a>
+      <a class="active" href="login.html">Login</a>
+      <a href="playlist.html">Playlists</a>
+      <a href="DMCA_POLICY.pdf">DMCA Policy</a>
+      <a href="index.html">AUP Policy</a>
+      
+    </div>
 
-    <a href='index.html'>
-      <h2>Back to Homepage</h2>
-    </a>
+
 
     <h4>Please enter your email and password </h4>
     <form onsubmit="return login()">
