--- a/static/playlist.html
+++ b/static/playlist.html
@@ -7,13 +7,16 @@
 <!-- Add icon library -->
 </head>
 <body>
-<h1>Playlists & More </h1>
 
-    <div>
-        <a href="index.html">
-        <button>Back</button>
-        </a>
-    </div>
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <a href="login.html">Login</a>
+    <a class="active" href="playlist.html">Playlists</a>
+    <a href="DMCA_POLICY.pdf">DMCA Policy</a>
+    <a href="index.html">AUP Policy</a>
+    
+  </div>
+
 
     <!--to add some space betweeb divs-->
     <br></br>
