--- a/static/playlist.html
+++ b/static/playlist.html
@@ -14,6 +14,7 @@
     <a class="active" href="playlist.html">Playlists</a>
     <a href="DMCA_POLICY.pdf">DMCA Policy</a>
     <a href="index.html">AUP Policy</a>
+    <b id="currentUser">Guest</b>
     
   </div>
 
