--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <a href="playlist.html">Playlists</a>
     <a href="DMCA_POLICY.pdf">DMCA Policy</a>
     <a href="index.html">AUP Policy</a>
-    
+    <b id="currentUser">Guest</b>
   </div>
 
 
