--- a/static/login.html
+++ b/static/login.html
@@ -18,6 +18,7 @@
       <a href="playlist.html">Playlists</a>
       <a href="DMCA_POLICY.pdf">DMCA Policy</a>
       <a href="index.html">AUP Policy</a>
+      <b id="currentUser">Guest</b>
       
     </div>
 
