Added Front end for adding tracks to playlists

--- a/static/playlist.html
+++ b/static/playlist.html
@@ -89,8 +89,8 @@
          </select>
         <button id="viewAllPlaylist">View</button>
         <button id="deleteList">Delete</button>
-        <br><br>Add a Track_id to selected playlist: <input type="text" id="trackName" maxlength="7">
-        <button id="addTrack">Add</button>
+        <br><br>Add a Track_id to selected playlist: <input type="text" id="trackIDField" maxlength="7">
+        <button id="addTrackToPlaylist">Add</button>
         </br></br>
         Delete a track from selected playlist: <input type="text" id="trackNameDelete" maxlength="7">
         <button id="deleteTrack">Delete</button>
