Added admin control tab
Added an admin control tab that is only visible when the user is logged in with admin priviledges

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
     <a href="DMCA_POLICY.pdf">DMCA Policy</a>
     <a href="index.html">AUP Policy</a>
     <b id="currentUser">Guest</b>
+    <a href="example.com" id="adminControl">Admin Control</a>
   </div>
 
 
