--- a/static/index.html
+++ b/static/index.html
@@ -13,9 +13,9 @@
     <a href="login.html">Login</a>
     <a href="playlist.html">Playlists</a>
     <a href="DMCA_POLICY.pdf">DMCA Policy</a>
-    <a href="index.html">AUP Policy</a>
+    <a href="AUP_POLICY.pdf">AUP Policy</a>
     <b id="currentUser">Guest</b>
-    <a href="example.com" id="adminControl">Admin Control</a>
+    <a href="admin.html" id="adminControl">Admin Control</a>
   </div>
 
 
