--- a/static/login.html
+++ b/static/login.html
@@ -17,9 +17,9 @@
       <a class="active" href="login.html">Login</a>
       <a href="playlist.html">Playlists</a>
       <a href="DMCA_POLICY.pdf">DMCA Policy</a>
-      <a href="index.html">AUP Policy</a>
+      <a href="AUP_POLICY.pdf">AUP Policy</a>
       <b id="currentUser">Guest</b>
-      <a href="example.com" id="adminControl">Admin Control</a>
+      <a href="admin.html" id="adminControl">Admin Control</a>
       
     </div>
 
