Added fronttend for ttrack delete for a given playlist

--- a/static/playlist.html
+++ b/static/playlist.html
@@ -99,10 +99,11 @@
             <button id="deleteList">Delete</button>
             <br><br>Add a Track_id to selected playlist: <input type="text" id="trackIDField" maxlength="7">
             <button id="addTrackToPlaylist">Add</button>
-            </br></br>Delete a track from selected playlist: <input type="text" id="trackNameDelete" maxlength="7">
+            </br></br>Delete a track from selected playlist:  <select name="deleteTrackPlaylist" id="deleteTrackPlaylist">
+            </select> <input type="text" id="trackNameDelete" maxlength="7">
             <button id="deleteTrack">Delete</button>
             </br></br>
-            View all tracks in your playlist: <select name="playsLAll" id="allPlaylists">
+            View all tracks in your playlist: <select name="allPlaylists" id="allPlaylists">
             </select>
             <button id="viewTracksInPlaylist">View Tracks</button>
 
