Added front end for making reviews

--- a/static/playlist.html
+++ b/static/playlist.html
@@ -60,7 +60,7 @@
             <italic>Add a review to selected playlist</italic>
             </br>
             <textarea id="review" rows="9" cols="60"></textarea>
-            <button id="addTrack">Add</button>
+            <button id="addReview">Add</button>
             </br></br>
 
 
