--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,9 @@
     <a class="active" href="index.html">Home</a>
     <a href="login.html">Login</a>
     <a href="playlist.html">Playlists</a>
-    <a href="DMCA_POLICY.pdf">DMCA Policy</a>
-    <a href="AUP_POLICY.pdf">AUP Policy</a>
+    <a href="dmca.txt">DMCA Policy</a>
+    <a href="aup.txt">AUP Policy</a>
+    <a href="sp.txt">S&P Policy</a>
     <b id="currentUser">Guest</b>
     <a href="admin.html" id="adminControl">Admin Control</a>
   </div>
