--- a/static/login.html
+++ b/static/login.html
@@ -16,8 +16,9 @@
       <a href="index.html">Home</a>
       <a class="active" href="login.html">Login</a>
       <a href="playlist.html">Playlists</a>
-      <a href="DMCA_POLICY.pdf">DMCA Policy</a>
-      <a href="AUP_POLICY.pdf">AUP Policy</a>
+      <a href="dmca.txt">DMCA Policy</a>
+      <a href="aup.txt">AUP Policy</a>
+      <a href="sp.txt">S&P Policy</a>
       <b id="currentUser">Guest</b>
       <a href="admin.html" id="adminControl">Admin Control</a>
       
