Added front and back end for updating a password

--- a/static/login.html
+++ b/static/login.html
@@ -21,7 +21,7 @@
       <a href="sp.txt">S&P Policy</a>
       <b id="currentUser">Guest</b>
       <a href="admin.html" id="adminControl">Admin Control</a>
-      
+
     </div>
 
 
@@ -85,6 +85,19 @@
       </br>
 
       <input type="submit" value="Submit" name="userEmailConfirm" id="userEmailConfirm">
+    </form>
+
+    <h4>Change Password</h4>
+    <form>
+      Enter email:
+      <input name='email' id='emailChange' required>
+      <br>
+      <br>
+      Enter password:
+      <input name='password' type='password' id='passwordChange' required>
+      </br>
+      </br>
+      <input type="button" value="Submit" name="changePassword" id="changePassword">
     </form>
 
     <script defer src="login.js"></script>
