Base for admin review control

--- a/static/admin.html
+++ b/static/admin.html
@@ -37,7 +37,7 @@
 
         <select name="playsL" id="playsL">
          </select>
-
+         <button id="showReviews">Show Reviews for selection</button>
          <br></br>
          <label for="Available Reviews">Choose a Review:</label>
 
