playlists tab no longer visible when logged out

--- a/static/login.html
+++ b/static/login.html
@@ -15,12 +15,13 @@
     <div class="topnav" id="topnav">
       <a href="index.html">Home</a>
       <a class="active" href="login.html">Login</a>
-      <a href="playlist.html">Playlists</a>
+      
       <a href="dmca.txt">DMCA Policy</a>
       <a href="aup.txt">AUP Policy</a>
       <a href="sp.txt">S&P Policy</a>
       <b id="currentUser">Guest</b>
-      <a href="admin.html" id="adminControl">Admin Control</a>
+      <a href="playlist.html" class ="hidden" id ="playlistControl">Playlists</a>
+      <a href="admin.html" class ="hidden" id="adminControl">Admin Control</a>
 
     </div>
 
