--- a/static/index.html
+++ b/static/index.html
@@ -11,12 +11,13 @@
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="login.html">Login</a>
-    <a href="playlist.html">Playlists</a>
+    
     <a href="dmca.txt">DMCA Policy</a>
     <a href="aup.txt">AUP Policy</a>
     <a href="sp.txt">S&P Policy</a>
     <b id="currentUser">Guest</b>
-    <a href="admin.html" id="adminControl">Admin Control</a>
+    <a href="playlist.html" class ="hidden" id ="playlistControl">Playlists</a>
+    <a href="admin.html" class ="hidden" id="adminControl">Admin Control</a>
   </div>
 
 
