Minor login html change

--- a/static/login.html
+++ b/static/login.html
@@ -37,7 +37,7 @@
       <input name='password' type='password' id='passwordLogin' required>
       </br>
       </br>
-      <input type="submit" value="Submit" name="userSubmitTimes" id="loginSubmit">
+      <input type="submit" value="Login" name="userSubmitTimes" id="loginSubmit">
     </form>
 
 
@@ -65,7 +65,7 @@
       </br>
       <br>
       </br>
-      <input type="submit" value="Submit" name="userSubmitTimes" id="registerSubmit">
+      <input type="submit" value="Register" name="userSubmitTimes" id="registerSubmit">
     </form>
 
 
@@ -85,7 +85,7 @@
       <br>
       </br>
 
-      <input type="submit" value="Submit" name="userEmailConfirm" id="userEmailConfirm">
+      <input type="submit" value="Confirm Email" name="userEmailConfirm" id="userEmailConfirm">
     </form>
 
     <h4>Change Password</h4>
@@ -98,7 +98,7 @@
       <input name='password' type='password' id='passwordChange' required>
       </br>
       </br>
-      <input type="button" value="Submit" name="changePassword" id="changePassword">
+      <input type="button" value="Update Password" name="changePassword" id="changePassword">
     </form>
 
     <script defer src="login.js"></script>
