--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
 
     <br></br>
 
-    <div id="pulbicPlaylists">
+    <div id="publicPlaylists" class="publicPlaylists">
         <h3>Public Playlists</h2>
         <ul id="listPublicPlaylists">
 
@@ -59,6 +59,8 @@
         </ul>
 
     </div>
+    <br></br>
+    <br></br>
 
     <div class="about" id="about">
         <h3>About this page</h3>
