--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
         <a href="aup.txt">AUP Policy</a>
         <a href="sp.txt">S&P Policy</a>
         <b id="currentUser">Guest</b>
-        <a href="playlist.html" class ="hidden">Playlists</a>
+        <a href="playlist.html" id="playlistControl" class ="hidden">Playlists</a>
         <a href="admin.html" id="adminControl" class ="hidden">Admin Control</a>
     </div>
 
